--- a/style/style.css
+++ b/style/style.css
@@ -56,6 +56,25 @@ img {
   background-position: center;
   padding-bottom: 180px;
 }
+@media (max-width: 1439px) {
+  .header {
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+}
+@media (max-width: 1023px) {
+  .header {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+@media (max-width: 767px) {
+  .header {
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-bottom: 80px;
+  }
+}
 .header_title {
   margin-top: 120px;
   color: #fff;
@@ -65,6 +84,22 @@ img {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+@media (max-width: 1439px) {
+  .header_title {
+    font-size: 65px;
+  }
+}
+@media (max-width: 1023px) {
+  .header_title {
+    font-size: 55px;
+  }
+}
+@media (max-width: 767px) {
+  .header_title {
+    font-size: 40px;
+    margin-top: 70px;
+  }
 }
 .header_description {
   max-width: 1196px;
@@ -78,6 +113,23 @@ img {
   line-height: 75px;
   letter-spacing: 2.56px;
   text-transform: uppercase;
+}
+@media (max-width: 1439px) {
+  .header_description {
+    font-size: 50px;
+    line-height: 1.2;
+  }
+}
+@media (max-width: 1023px) {
+  .header_description {
+    font-size: 40px;
+  }
+}
+@media (max-width: 767px) {
+  .header_description {
+    margin-top: 70px;
+    font-size: 30px;
+  }
 }
 .header_link {
   display: flex;
@@ -95,6 +147,17 @@ img {
   line-height: normal;
   letter-spacing: -0.6px;
 }
+@media (max-width: 1023px) {
+  .header_link {
+    font-size: 26px;
+  }
+}
+@media (max-width: 767px) {
+  .header_link {
+    padding: 10px 20px;
+    font-size: 20px;
+  }
+}
 .header_link:hover, .header_link:focus {
   opacity: 0.6;
 }
@@ -108,6 +171,16 @@ img {
   font-variant: small-caps;
   letter-spacing: 0.6px;
 }
+@media (max-width: 1023px) {
+  .header_adress {
+    font-size: 25px;
+  }
+}
+@media (max-width: 767px) {
+  .header_adress {
+    font-size: 20px;
+  }
+}
 
 .description {
   display: flex;
@@ -116,6 +189,12 @@ img {
   text-transform: uppercase;
   padding: 0 60px;
   padding-bottom: 229px;
+}
+@media (max-width: 767px) {
+  .description {
+    padding: 0 16px;
+    padding-bottom: 120px;
+  }
 }
 .description_title {
   margin-top: 121px;
@@ -127,6 +206,18 @@ img {
   line-height: 45px;
   letter-spacing: 1px;
 }
+@media (max-width: 1023px) {
+  .description_title {
+    font-size: 40px;
+    line-height: 1.2;
+  }
+}
+@media (max-width: 767px) {
+  .description_title {
+    margin-top: 70px;
+    font-size: 30px;
+  }
+}
 .description_text {
   margin-top: 64px;
   color: #fff;
@@ -137,6 +228,17 @@ img {
   line-height: 60px;
   width: 100%;
   max-width: 1602px;
+}
+@media (max-width: 1023px) {
+  .description_text {
+    font-size: 30px;
+    line-height: 1.2;
+  }
+}
+@media (max-width: 767px) {
+  .description_text {
+    font-size: 20px;
+  }
 }
 
 .screens {
@@ -169,6 +271,11 @@ img {
   line-height: 65px;
   letter-spacing: 2px;
   text-transform: uppercase;
+}
+@media (max-width: 1023px) {
+  .roadmap_title {
+    font-size: 40px;
+  }
 }
 .roadmap_stages {
   width: 100%;
@@ -327,6 +434,17 @@ img {
   margin-top: 398px;
   padding: 0 60px;
 }
+@media (max-width: 1023px) {
+  .team {
+    margin-top: 150px;
+  }
+}
+@media (max-width: 767px) {
+  .team {
+    padding: 0 16px;
+    margin-top: 70px;
+  }
+}
 .team_title {
   color: #fff;
   text-align: center;
@@ -336,6 +454,17 @@ img {
   line-height: 65px;
   letter-spacing: 2px;
   text-transform: uppercase;
+}
+@media (max-width: 1023px) {
+  .team_title {
+    font-size: 40px;
+    line-height: 1.2;
+  }
+}
+@media (max-width: 767px) {
+  .team_title {
+    font-size: 30px;
+  }
 }
 .team_description {
   margin-top: 30px;
@@ -349,11 +478,28 @@ img {
   width: 100%;
   max-width: 1318px;
 }
+@media (max-width: 767px) {
+  .team_description {
+    font-size: 25px;
+  }
+}
 .team_orangeBlock {
   margin-top: 400px;
-  width: 1272px;
+  width: 100%;
+  max-width: 1272px;
   height: 138px;
   background: #f1521f;
+}
+@media (max-width: 1023px) {
+  .team_orangeBlock {
+    margin-top: 150px;
+  }
+}
+@media (max-width: 767px) {
+  .team_orangeBlock {
+    margin-top: 70px;
+    height: 70px;
+  }
 }
 
 .cards {
@@ -366,6 +512,11 @@ img {
 @media (max-width: 1439px) {
   .cards {
     padding: 70px 0;
+  }
+}
+@media (max-width: 1023px) {
+  .cards {
+    margin-top: 100px;
   }
 }
 .cards_list {
@@ -563,6 +714,17 @@ img {
   line-height: normal;
   text-transform: uppercase;
 }
+@media (max-width: 1023px) {
+  .footer_title {
+    font-size: 40px;
+    line-height: 1.2;
+  }
+}
+@media (max-width: 767px) {
+  .footer_title {
+    font-size: 30px;
+  }
+}
 .footer_description {
   margin-top: -5px;
   color: #1d1d1f;
@@ -572,10 +734,27 @@ img {
   font-weight: 400;
   line-height: 40px;
 }
+@media (max-width: 1023px) {
+  .footer_description {
+    margin-top: 10px;
+    font-size: 20px;
+  }
+}
+@media (max-width: 767px) {
+  .footer_description {
+    font-size: 18px;
+  }
+}
 .footer_socialList {
   margin-top: 40px;
   display: flex;
   gap: 50px;
+}
+@media (max-width: 1023px) {
+  .footer_socialList {
+    margin-top: 25px;
+    gap: 30px;
+  }
 }
 .footer_socialItem {
   display: flex;
@@ -588,6 +767,18 @@ img {
   border-radius: 11px;
   border: 2px solid #f1521f;
   box-shadow: 0px 0px 10px 0px rgba(17, 255, 68, 0.4);
+}
+@media (max-width: 1023px) {
+  .footer_socialItem {
+    width: 60px;
+    height: 60px;
+  }
+}
+@media (max-width: 767px) {
+  .footer_socialItem {
+    width: 55px;
+    height: 55px;
+  }
 }
 .footer_socialItem:hover, .footer_socialItem:focus {
   opacity: 0.7;
