--- a/style/style.css
+++ b/style/style.css
@@ -7,13 +7,19 @@
   outline: 0;
 }
 
+@font-face {
+  font-family: "Anton";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/Anton-Regular.woff2") format("woff2"), url("../fonts/Anton-Regular.woff") format("woff");
+}
 html {
   height: 100%;
 }
 
 body {
   margin: 0;
-  font-family: "Space Mono", monospace;
+  font-family: "Anton";
   color: #fff;
   font-weight: 400;
   line-height: 1.2;
@@ -47,14 +53,17 @@ img {
   position: relative;
   display: flex;
   flex-direction: column;
-  align-items: center;
   width: 100%;
   height: auto;
   overflow: hidden;
-  background: url("../img/header-bg.png");
+  background: #252525;
+  background-image: url("../img/header-bg.png");
+  background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
-  padding-bottom: 180px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  padding-left: 60px;
+  padding-right: 60px;
 }
 @media (max-width: 1439px) {
   .header {
@@ -75,8 +84,14 @@ img {
     padding-bottom: 80px;
   }
 }
+.header_top {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
 .header_title {
-  margin-top: 120px;
+  display: flex;
+  gap: 20px;
   color: #fff;
   text-align: center;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -101,62 +116,65 @@ img {
     margin-top: 70px;
   }
 }
-.header_description {
-  max-width: 1196px;
-  margin-top: 114px;
+.header_menu {
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 12px;
+}
+.header_menuItem {
+  text-decoration: none;
   color: #fff;
-  text-align: center;
-  font-family: "Space Mono";
-  font-size: 64px;
+  text-align: right;
+  font-size: 30px;
   font-style: normal;
   font-weight: 400;
-  line-height: 75px;
-  letter-spacing: 2.56px;
+  line-height: normal; /* 250% */
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  background: #1d1d1f;
+  padding: 2px 40px;
+  border-radius: 15px;
+}
+.header_bottom {
+  display: flex;
+  width: 100%;
+  padding-left: 20px;
+}
+.header_left {
+  width: 50%;
+  margin-top: 400px;
+}
+.header_right {
+  width: 50%;
+}
+.header_right img {
+  margin-top: 150px;
+  width: 100%;
+  height: auto;
+}
+.header_description {
+  color: #fff;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 75px; /* 166.667% */
+  letter-spacing: 1.8px;
   text-transform: uppercase;
 }
-@media (max-width: 1439px) {
-  .header_description {
-    font-size: 50px;
-    line-height: 1.2;
-  }
-}
-@media (max-width: 1023px) {
-  .header_description {
-    font-size: 40px;
-  }
-}
-@media (max-width: 767px) {
-  .header_description {
-    margin-top: 70px;
-    font-size: 30px;
-  }
-}
 .header_link {
-  display: flex;
+  display: inline-flex;
   transition: 0.3s ease;
   margin-top: 60px;
-  padding: 20px 60px;
-  gap: 10px;
   border-radius: 10px;
   border: 1px solid #fff;
-  background: #aea564;
+  background: #43b446;
+  padding: 20px 60px;
   color: #000;
   font-size: 30px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
   letter-spacing: -0.6px;
-}
-@media (max-width: 1023px) {
-  .header_link {
-    font-size: 26px;
-  }
-}
-@media (max-width: 767px) {
-  .header_link {
-    padding: 10px 20px;
-    font-size: 20px;
-  }
 }
 .header_link:hover, .header_link:focus {
   opacity: 0.6;
@@ -171,55 +189,36 @@ img {
   font-variant: small-caps;
   letter-spacing: 0.6px;
 }
-@media (max-width: 1023px) {
-  .header_adress {
-    font-size: 25px;
-  }
-}
-@media (max-width: 767px) {
-  .header_adress {
-    font-size: 20px;
-  }
-}
-
-.description {
+.about {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-transform: uppercase;
+  width: 100%;
+  max-width: 1600px;
   padding: 0 60px;
-  padding-bottom: 229px;
+  padding-bottom: 129px;
 }
 @media (max-width: 767px) {
-  .description {
+  .about {
     padding: 0 16px;
     padding-bottom: 120px;
   }
 }
-.description_title {
-  margin-top: 121px;
+.about_title {
+  align-self: flex-end;
+  margin-top: 179px;
   color: #fff;
   text-align: center;
   font-size: 50px;
   font-style: normal;
   font-weight: 400;
-  line-height: 45px;
+  line-height: 45px; /* 90% */
   letter-spacing: 1px;
+  text-transform: uppercase;
 }
-@media (max-width: 1023px) {
-  .description_title {
-    font-size: 40px;
-    line-height: 1.2;
-  }
-}
-@media (max-width: 767px) {
-  .description_title {
-    margin-top: 70px;
-    font-size: 30px;
-  }
-}
-.description_text {
-  margin-top: 64px;
+.about_text {
+  margin-top: 152px;
   color: #fff;
   text-align: center;
   font-size: 38px;
@@ -227,32 +226,116 @@ img {
   font-weight: 400;
   line-height: 60px;
   width: 100%;
-  max-width: 1602px;
 }
 @media (max-width: 1023px) {
-  .description_text {
+  .about_text {
     font-size: 30px;
     line-height: 1.2;
   }
 }
 @media (max-width: 767px) {
-  .description_text {
+  .about_text {
     font-size: 20px;
   }
 }
 
-.screens {
+.mission {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 1600px;
   width: 100%;
-  height: 3100px;
-  background-image: url("../img/screen-bg.png");
-  background-repeat: no-repeat;
-  background-size: 100% 3100px;
-  background-position: center;
+  padding: 0 60px;
 }
-@media (max-width: 1919px) {
-  .screens {
-    background-size: cover;
-  }
+.mission_title {
+  color: #fff;
+  text-align: center;
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 75px; /* 150% */
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+.mission_text {
+  padding: 88px 68px;
+  margin-top: 160px;
+  border-radius: 10px;
+  border: 1px solid #000;
+  background: #43b446;
+  width: 100%;
+  max-width: 1171px;
+  color: #fff;
+  text-align: center;
+  font-size: 38px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 60px;
+  text-transform: uppercase;
+}
+
+.feature {
+  margin-top: 100px;
+  width: 100%;
+  background: url("../img/feature-bg.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.feature_container {
+  width: 100%;
+  max-width: 1600px;
+  margin: 0 auto;
+}
+.feature_title {
+  color: #fff;
+  text-align: center;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 65px; /* 150% */
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+.feature_list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin-top: 300px;
+  list-style: none;
+}
+.feature_line-wrapper {
+  display: flex;
+  justify-content: space-between;
+  width: 1500px;
+  margin-top: 200px;
+}
+.feature_item {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  color: #fff;
+  text-align: center;
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 75px; /* 150% */
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+.feature_item span {
+  display: block;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: #28822a;
+}
+.feature_item-1 {
+  align-self: flex-start;
+  margin-left: 150px;
+}
+.feature_item-2 {
+  margin-top: 150px;
 }
 
 .roadmap {
@@ -281,438 +364,97 @@ img {
   width: 100%;
 }
 .roadmap_top {
-  position: relative;
-  width: 100%;
-  display: grid;
-  gap: 150px;
-  grid-template-columns: 293px 341px 213px 213px;
-  grid-template-rows: auto;
-  margin-top: 60px;
+  margin-top: 50px;
+  display: flex;
   justify-content: center;
-}
-@media (max-width: 1590px) {
-  .roadmap_top {
-    grid-template-columns: repeat(4, 1fr);
-    -moz-column-gap: 30px;
-         column-gap: 30px;
-  }
-}
-@media (max-width: 767px) {
-  .roadmap_top {
-    grid-template-columns: 1fr;
-    justify-items: center;
-    row-gap: 30px;
-  }
-}
-.roadmap_top::after {
-  content: "";
-  position: absolute;
-  bottom: 50px;
-  display: block;
-  width: 100%;
-  height: 2px;
-  background: #f1521f;
-}
-@media (max-width: 1590px) {
-  .roadmap_top::after {
-    bottom: 30px;
-  }
-}
-@media (max-width: 767px) {
-  .roadmap_top::after {
-    display: none;
-  }
+  gap: 70px;
 }
 .roadmap_bottom {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 140px;
+}
+.roadmap_item-2, .roadmap_item-4 {
+  margin-top: 200px;
+}
+
+.coming {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   position: relative;
   width: 100%;
-  display: grid;
-  gap: 150px;
-  grid-template-columns: 400px 213px 308px;
-  grid-template-rows: auto;
-  margin-top: 160px;
-  justify-content: center;
+  padding-top: 160px;
+  padding-bottom: 160px;
 }
-@media (max-width: 1590px) {
-  .roadmap_bottom {
-    grid-template-columns: repeat(3, 1fr);
-    -moz-column-gap: 30px;
-         column-gap: 30px;
-  }
+.coming_link {
+  position: relative;
+  color: #000;
+  text-align: center;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: -0.9px;
+  border-radius: 10px;
+  border: 1px solid #fff;
+  background: #43b446;
+  padding: 20px 60px;
+  margin-left: 184px;
 }
-@media (max-width: 767px) {
-  .roadmap_bottom {
-    grid-template-columns: 1fr;
-    justify-items: center;
-    row-gap: 30px;
-    margin-top: 30px;
-  }
-}
-.roadmap_bottom::after {
-  content: "";
+.coming_link img {
   position: absolute;
-  bottom: 60px;
-  display: block;
-  width: 100%;
-  height: 2px;
-  background: #f1521f;
+  bottom: -160px;
+  right: -60px;
 }
-@media (max-width: 1590px) {
-  .roadmap_bottom::after {
-    bottom: 30px;
-  }
+.coming_screen {
+  align-self: flex-end;
 }
-@media (max-width: 767px) {
-  .roadmap_bottom::after {
-    display: none;
-  }
-}
-.roadmap_bottom .roadmap_cell:last-of-type::after {
-  display: none;
-}
-.roadmap_cell {
-  position: relative;
-  z-index: 3;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  text-align: center;
-  color: #fff1f1;
-  font-size: 25px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  letter-spacing: -0.5px;
-}
-@media (max-width: 1590px) {
-  .roadmap_cell {
-    font-size: 18px;
-    max-width: 280px;
-    padding: 0 10px;
-  }
-}
-.roadmap_cell::after {
-  content: "";
-  display: none;
-  width: 2px;
-  margin-top: 30px;
-  height: 180px;
-  background: #f1521f;
-}
-@media (max-width: 767px) {
-  .roadmap_cell::after {
-    display: block;
-  }
-}
-.roadmap_round {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 40px;
-  color: #000;
-  text-align: center;
-  font-size: 30px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 1.1;
-  letter-spacing: -0.7px;
-  width: 101px;
-  height: 101px;
-  border-radius: 50%;
-  background: #aea564;
-}
-@media (max-width: 1590px) {
-  .roadmap_round {
-    width: 60px;
-    height: 60px;
-    font-size: 16px;
-  }
-}
-
-.team {
-  margin-top: 398px;
-  padding: 0 60px;
-}
-@media (max-width: 1023px) {
-  .team {
-    margin-top: 150px;
-  }
-}
-@media (max-width: 767px) {
-  .team {
-    padding: 0 16px;
-    margin-top: 70px;
-  }
-}
-.team_title {
+.coming_description {
+  margin-top: 120px;
   color: #fff;
   text-align: center;
-  font-size: 50px;
+  font-size: 35px;
   font-style: normal;
   font-weight: 400;
-  line-height: 65px;
-  letter-spacing: 2px;
+  line-height: 40px; /* 114.286% */
   text-transform: uppercase;
-}
-@media (max-width: 1023px) {
-  .team_title {
-    font-size: 40px;
-    line-height: 1.2;
-  }
-}
-@media (max-width: 767px) {
-  .team_title {
-    font-size: 30px;
-  }
-}
-.team_description {
-  margin-top: 30px;
-  color: #fff;
-  text-align: center;
-  font-size: 38px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  letter-spacing: -0.76px;
-  width: 100%;
-  max-width: 1318px;
-}
-@media (max-width: 767px) {
-  .team_description {
-    font-size: 25px;
-  }
-}
-.team_orangeBlock {
-  margin-top: 400px;
-  width: 100%;
-  max-width: 1272px;
-  height: 138px;
-  background: #f1521f;
-}
-@media (max-width: 1023px) {
-  .team_orangeBlock {
-    margin-top: 150px;
-  }
-}
-@media (max-width: 767px) {
-  .team_orangeBlock {
-    margin-top: 70px;
-    height: 70px;
-  }
-}
-
-.cards {
-  width: 100%;
-  margin-top: 400px;
-  padding: 150px 0;
-  border-top: 2px solid #f1521f;
-  border-bottom: 2px solid #f1521f;
-}
-@media (max-width: 1439px) {
-  .cards {
-    padding: 70px 0;
-  }
-}
-@media (max-width: 1023px) {
-  .cards {
-    margin-top: 100px;
-  }
-}
-.cards_list {
-  display: grid;
-  grid-template-columns: repeat(3, 462px);
-  grid-template-rows: 1016px;
-  -moz-column-gap: 131px;
-       column-gap: 131px;
-  justify-content: center;
-}
-@media (max-width: 1700px) {
-  .cards_list {
-    -moz-column-gap: 30px;
-         column-gap: 30px;
-    grid-template-columns: repeat(3, 400px);
-  }
-}
-@media (max-width: 1439px) {
-  .cards_list {
-    grid-template-columns: 400px;
-    grid-template-rows: auto auto auto;
-    row-gap: 60px;
-  }
-}
-@media (max-width: 500px) {
-  .cards_list {
-    grid-template-columns: 102%;
-  }
-}
-.cards_item {
-  display: flex;
-  width: 100%;
-  height: 1016px;
-  padding: 8px;
-  flex-direction: column;
-  align-items: center;
-  color: #000;
-  text-align: center;
-  font-size: 40px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 75px;
-  letter-spacing: 1.6px;
-  text-transform: uppercase;
-  border-radius: 50px;
-  overflow: hidden;
-}
-.cards_item span {
-  padding: 0 20px;
-}
-@media (max-width: 1439px) {
-  .cards_item span {
-    padding: 20px;
-  }
-}
-.cards_item--1 {
-  background: url("../img/card-1.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-@media (max-width: 1439px) {
-  .cards_item--1 {
-    background-size: cover;
-  }
-}
-.cards_item--2 {
-  background: url("../img/card-2.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-@media (max-width: 1439px) {
-  .cards_item--2 {
-    background-size: cover;
-  }
-}
-.cards_item--3 {
-  background: url("../img/card-3.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-@media (max-width: 1439px) {
-  .cards_item--3 {
-    background-size: cover;
-  }
-}
-@media (max-width: 1439px) {
-  .cards_item {
-    height: auto;
-    min-height: 800px;
-    padding: 0 3px;
-  }
-}
-@media (max-width: 500px) {
-  .cards_item {
-    padding: 0;
-    font-size: 30px;
-    min-height: 550px;
-  }
-}
-.cards_itemMobileDescription {
-  display: none;
-}
-@media (max-width: 1439px) {
-  .cards_itemMobileDescription {
-    display: block;
-    font-size: 22px;
-    line-height: 1.2;
-    letter-spacing: normal;
-    margin-top: auto;
-    background: linear-gradient(0deg, #aea564 0%, #aea564 100%);
-    padding: 20px;
-  }
-}
-@media (max-width: 500px) {
-  .cards_itemMobileDescription {
-    font-size: 18px;
-  }
-}
-.cards_listFake {
-  position: relative;
-  z-index: 3;
-  margin-top: -700px;
-  display: grid;
-  grid-template-columns: repeat(3, 462px);
-  grid-template-rows: auto;
-  -moz-column-gap: 131px;
-       column-gap: 131px;
-  justify-content: center;
-  width: 100%;
-  background: linear-gradient(0deg, #aea564 0%, #aea564 100%);
-}
-@media (max-width: 1700px) {
-  .cards_listFake {
-    -moz-column-gap: 30px;
-         column-gap: 30px;
-    grid-template-columns: repeat(3, 400px);
-  }
-}
-@media (max-width: 1439px) {
-  .cards_listFake {
-    display: none;
-  }
-}
-.cards_itemFake {
-  color: #000;
-  text-align: center;
-  padding: 30px 15px;
-  font-size: 25px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  letter-spacing: -0.5px;
-  text-transform: uppercase;
-}
-
-.bottom {
-  margin-top: 112px;
-  width: 100%;
-  min-height: 2224px;
-  background-image: url("../img/bottom-bg.png");
-  background-repeat: no-repeat;
-  background-size: cover;
+  padding: 0 40px;
 }
 
 .footer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   padding-bottom: 80px;
   width: 100%;
   min-height: 312px;
   background: url("../img/footer-bg.png");
   background-size: cover;
   background-repeat: no-repeat;
-  background: linear-gradient(0deg, #aea564 0%, #aea564 100%);
 }
-@media (max-width: 1439px) {
-  .footer {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
+.footer_container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  padding: 0 60px;
+  max-width: 1800px;
 }
-@media (max-width: 767px) {
-  .footer {
-    padding-left: 16px;
-    padding-right: 16px;
-  }
+.footer_titleWrapper {
+  display: flex;
+  align-items: baseline;
+  margin-top: 45px;
 }
 .footer_title {
-  margin-top: 45px;
-  color: #1d1d1f;
-  font-size: 55px;
+  display: flex;
+  align-items: baseline;
+  gap: 20px;
+  color: #fff;
+  text-align: center;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-size: 85px;
   font-style: normal;
   font-weight: 400;
-  line-height: normal;
-  text-transform: uppercase;
+  line-height: 70px;
 }
 @media (max-width: 1023px) {
   .footer_title {
@@ -726,24 +468,13 @@ img {
   }
 }
 .footer_description {
-  margin-top: -5px;
-  color: #1d1d1f;
+  margin-top: 0;
+  color: #fff;
   text-align: center;
   font-size: 24px;
   font-style: normal;
   font-weight: 400;
   line-height: 40px;
-}
-@media (max-width: 1023px) {
-  .footer_description {
-    margin-top: 10px;
-    font-size: 20px;
-  }
-}
-@media (max-width: 767px) {
-  .footer_description {
-    font-size: 18px;
-  }
 }
 .footer_socialList {
   margin-top: 40px;
@@ -764,21 +495,9 @@ img {
   justify-content: center;
   align-items: center;
   transition: 0.3s ease;
-  border-radius: 11px;
-  border: 2px solid #f1521f;
-  box-shadow: 0px 0px 10px 0px rgba(17, 255, 68, 0.4);
-}
-@media (max-width: 1023px) {
-  .footer_socialItem {
-    width: 60px;
-    height: 60px;
-  }
-}
-@media (max-width: 767px) {
-  .footer_socialItem {
-    width: 55px;
-    height: 55px;
-  }
+  border-radius: 11.154px;
+  border: 2.231px solid #fff;
+  box-shadow: 0px 0px 5px 0px rgba(17, 255, 68, 0.4);
 }
 .footer_socialItem:hover, .footer_socialItem:focus {
   opacity: 0.7;
